# hamlet-lint

./: .ocamlformat  .ocamlformat-ignore  CHANGELOG.md  CHANGES-5.4.md  LICENSE  Makefile  README.md  SWITCH-TO-OPAM.md  dune-project  hamlet-lint.opam
.githooks/: pre-commit
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  release.yml
analyzer/: dune  main.ml  report.ml  rule.ml
config/: config.ml  dune
docs/: ARCHITECTURE.md  CONTRIBUTING.md  LEARNING.md  LIMITATIONS.md  RELEASING.md  RULE.md  USAGE.md
extract/: arm_classify.ml  classify.ml  combinator_table.ml  compat.cppo.ml  compat.ml  dune  filter_output.ml  handler.ml  handler_env.ml  latent_fixpoint.ml  main.ml  pipeline.ml  propagate.ml  tags.ml  upstream.ml  walker.ml  walker_util.ml
release/: hamlet-lint.opam.tmpl  run.sh  versions.sh
schema/: dune  schema.ml
test/: dune  test_e2e.ml  test_rule.ml
test/cases/: README.md  cause_cases.ml  chained_cases.ml  cross_cu_cases.ml  dune  edge_cases.ml  filter_scope_cases.ml  layer_cases.ml  widening_cases.ml
test/cases/aliased_handler_stale/: aliased_handler_stale.ml  dune
test/cases/aliased_provide/: aliased_provide.ml  dune
test/cases/aliased_provide_stale/: dune
test/cases/cross_module_handler_stale/: cross_module_handler.ml  dune  handler_mod.ml
test/cases/errors_body_introducer_cross_module_helper/: dune  helpers.ml  user.ml
test/cases/errors_body_introducer_cross_module_helper_clean/: dune
test/cases/errors_body_introducer_deep_chain/: dune
test/cases/errors_body_introducer_deep_chain_clean/: dune  errors_body_introducer_deep_chain_clean.ml
test/cases/errors_body_introducer_direct_clean/: dune  errors_body_introducer_direct_clean.ml
test/cases/errors_body_introducer_local_helper_clean/: dune  errors_body_introducer_local_helper_clean.ml
test/cases/errors_body_introducer_module_helper/: dune
test/cases/errors_body_introducer_module_helper_clean/: dune  errors_body_introducer_module_helper_clean.ml
test/cases/errors_body_introducer_ppx_clean/: dune  errors_body_introducer_ppx_clean.ml
test/cases/errors_body_introducer_runaway/: dune  errors_body_introducer_runaway.ml
test/cases/errors_body_introducer_runaway_clean/: dune
test/cases/errors_body_introducer_try_catch/: dune
test/cases/errors_body_introducer_try_catch_clean/: dune  errors_body_introducer_try_catch_clean.ml
test/cases/errors_multiple_arms_distinct_clean/: dune  errors_multiple_arms_distinct_clean.ml
test/cases/inline_stale/: dune  inline_stale.ml
test/cases/layer_catch_stale/: dune  layer_catch_stale.ml
test/cases/layer_provide_all_stale/: dune  layer_provide_all_stale.ml
test/cases/layer_provide_layer_stale/: dune  layer_provide_layer_stale.ml
test/cases/layer_provide_stale/: dune  layer_provide_stale.ml
test/cases/let_bound_handler_stale/: dune  let_bound_handler_stale.ml
test/cases/nested_let_handler/: nested_let_handler.ml
test/cases/nested_let_handler_stale/: dune
test/cases/tag_provide_clean/: dune
test/cases/tag_provide_stale/: dune  tag_provide_stale.ml
test/cases/unresolvable_handler_clean/: dune  unresolvable_handler_clean.ml
test/cases/wrapper_clean/: dune  wrapper_clean.ml
test/cases/wrapper_cross_module_namespace_collision/: caller.ml
test/cases/wrapper_cross_module_namespace_collision_stale/: clean_mod.ml  dune  stale_mod.ml
test/cases/wrapper_cross_module_stale/: dune  wrapper_a.ml  wrapper_b.ml
test/cases/wrapper_mutual_recursion/: dune  wrapper_mutual_recursion.ml
test/cases/wrapper_mutual_recursion_stale/: dune
test/cases/wrapper_no_callers/: dune
test/cases/wrapper_no_callers_clean/: dune  wrapper_no_callers_clean.ml
test/cases/wrapper_stale/: dune  wrapper_stale.ml
test/cases/wrapper_three_level_stale/: dune  wrapper_three_level_stale.ml
test/cases/wrapper_two_level_clean/: dune  wrapper_two_level_clean.ml
test/cases/wrapper_two_level_mixed/: dune  wrapper_two_level_mixed.ml
test/cases/wrapper_two_level_mixed_stale/: dune
test/cases/wrapper_two_level_stale/: dune  wrapper_two_level_stale.ml
test/support/: dune  hamlet_test_services.ml  metrics_sink.ml  remote_cache.ml
