; Analyzer side. Pure OCaml, no compiler-libs. Reads ND-JSON from
; stdin/file, applies the retroactive-widening rule, prints findings,
; sets exit code.

(library
 (name hamlet_lint_analyzer)
 (public_name hamlet-lint.analyzer)
 (libraries hamlet_lint_schema)
 (modules rule report))

(executable
 (name main)
 (public_name hamlet-lint)
 (package hamlet-lint)
 (libraries
  hamlet_lint_schema
  hamlet_lint_config
  hamlet_lint_analyzer
  cmdliner
  yojson)
 (modules main))
