; The compiler-libs side of hamlet-lint. Walks .cmt files, classifies
; calls to Hamlet.Combinators.catch / .provide, extracts handler and
; upstream tag rows, and emits per-call ND-JSON candidate records on
; stdout. The analyzer (sibling [analyzer/] dir) consumes them.
;
; Only [compat.cppo.ml] gates on ocaml_version — every other module
; uses standard 5.x compiler-libs APIs through the firewall.

(executable
 (name main)
 (public_name hamlet-lint-extract)
 (package hamlet-lint)
 (libraries
  hamlet_lint_schema
  hamlet_lint_config
  compiler-libs.common
  yojson
  unix))

(rule
 (targets compat.ml)
 (deps compat.cppo.ml)
 (action
  (run %{bin:cppo} -V OCAML:%{ocaml_version} %{deps} -o %{targets})))
